# jobboard_app

./: LICENSE  pyproject.toml
src/jobboard_app/core/: apps.py  dto.py  forms.py  middleware.py  models.py  services.py  urls.py  utils.py  validators.py  views.py
src/jobboard_app/core/business_logic/: exceptions.py
src/jobboard_app/core/business_logic/dto/: __init__.py  company.py  registration.py  vacancy.py
src/jobboard_app/core/business_logic/services/: __init__.py  common.py  company.py  registration.py  vacancy.py
src/jobboard_app/core/migrations/: 0001_initial.py  0002_rename_company_name_vacancy_company_and_more.py  0003_level_tag_vacancy_tags_alter_vacancy_level.py  0004_populate_levels_table_with_defaults.py  0005_vacancy_name.py  0006_vacancy_attachment.py  0007_company_logo.py  0008_create_default_roles.py
src/jobboard_app/core/models/: __init__.py  company.py  level.py  tag.py  vacancy.py
src/jobboard_app/core/presentation/: converters.py  urls.py  validators.py
src/jobboard_app/core/presentation/forms/: __init__.py  company.py  registration.py  vacancy.py
src/jobboard_app/core/presentation/templates/: base.html  get_vacancy.html  signin.html
src/jobboard_app/core/presentation/views/: __init__.py  company.py  registration.py  vacancy.py
src/jobboard_app/jobboard_app/: logger_formatter.py  settings.py  template_renders.py  urls.py
src/jobboard_app/templates/: add_company.html  add_vacancy.html  company_list.html  get_vacancy.html  index.html
