[tool.poetry]
name = "jobboard_app"
version = "0.1.0"
description = ""
authors = ["SashaKrivaltsevich"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.2.3"
flake8 = "^6.0.0"
python-dotenv = "1.0.0"
psycopg2-binary = "2.9.6"
dacite = "1.8.1"
Pillow = "10.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.3"
deptry = "^0.12.0"
pylint = "2.17.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
